# namada

./: .gitignore  Cargo.toml  flake.nix  rust-toolchain.toml
crates/airdrop/: Cargo.toml
crates/airdrop/src/: lib.rs  storage.rs  storage_key.rs  vp.rs
crates/apps_lib/src/: cli.rs
crates/apps_lib/src/cli/: client.rs
crates/apps_lib/src/client/: tx.rs
crates/core/src/: address.rs
crates/core/src/address/: raw.rs
crates/node/src/: protocol.rs
crates/node/src/shell/: init_chain.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: args.rs  lib.rs  tx.rs  validation.rs
crates/shielded_token/src/: storage_key.rs
crates/trans_token/src/: vp.rs
crates/tx/: Cargo.toml
crates/tx/src/: action.rs
crates/tx/src/data/: airdrop.rs  mod.rs
crates/tx_prelude/: Cargo.toml
crates/tx_prelude/src/: airdrop.rs  lib.rs
nix/: devshell.nix  env.nix  packages.nix
nix/pkgs/: cometbft.nix  default.nix
wasm/: Cargo.toml  Makefile
wasm/tx_claim_airdrop/: Cargo.toml
wasm/tx_claim_airdrop/src/: lib.rs
wasm/vp_implicit/src/: lib.rs
wasm/vp_user/src/: lib.rs
wasm_for_tests/: Makefile
