[package]
name = "namada_airdrop"
description = "Airdrop functionality for Namada"
edition = "2024"
keywords = ["blockchain", "privacy", "crypto", "protocol", "network"]
license = "MIT"
version = "0.251.0"
rust-version = "1.85"

[dependencies]
bellman.workspace = true
bls12_381.workspace = true
hex.workspace = true
namada_core.workspace = true
namada_storage.workspace = true
namada_tx.workspace = true
namada_trans_token.workspace = true
namada_vp_env.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
zair-core.workspace = true
zair-sapling-proofs.workspace = true
